# workspace

./: .gitignore  README.md  generate_lookback.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  development.Dockerfile  docker-compose.yml  entrypoint.sh
alembic/: env.py
alembic/versions/: 04357ff5f6d1_delete_default_create_and_update_column.py  4a7cfd23c798_update_user.py  4de7f025ba24_update_variables_name_in_tweet_and_user_.py  5a6e79de2a8c_initial_migration.py  6a838b4f6689_add_lookbacks_table.py  72c4d27522c6_update_tweets.py  7c6aeec1ab9e_update_length_column.py  8bb1fa47ff81_update_tweet_table.py  a19396539678_add_api_usage.py  bb8a2e0fddeb_create_table_accounts_and_cookies_for_.py  be0316024ebb_update_lookback_table.py  bec28e770bf5_update_length_of_msg.py  c51958e245e4_add_a_column_twitter_id.py  ca1b05c4912e_update_user.py
api/api_v1/: api.py
api/api_v1/crawl_twitter/services/: __init__.py  crawl_persons_service.py  crawl_tweets_service.py
api/api_v1/lookback/routers/: lookback.py
api/api_v1/lookback/services/: __init__.py  generate_lookback_service.py
api/api_v1/tweets/services/: __init__.py  add_tweet_service.py  (+1 more)
crawl_tweet_tasks/: __init__.py  celery_app.py  worker.sh
db/: database.py
models/: __init__.py  api_usage.py  base_model.py  cookies.py  crawl_accounts.py  highlights.py  lookbacks.py  tweets.py  users.py
schemas/: add_tweet_request.py  base_response_model.py  crawl_request.py  get_tweets_request.py  lookback_request.py  lookback_response.py  users_schema.py
(+3 files in other folders)
